1. Build all big four rows of html. 2. Aligned Logo and links on navigation bar. 3. Divided main text section and image.

--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,21 @@
 
 body {
     font-family: 'Hero New', sans-serif;
+    margin: 0;
+    width: 100vw;
+    height: 100vh;    
 }
+
+.info-container {
+
+}
+
+.quote-container {
+    background-color: #E5E7EB;
+}
+
 footer {
     background-color: #1F2937;
     color: #F9FAF8;
+    text-align: center;
 }
