--- a/styles/main_style.css
+++ b/styles/main_style.css
@@ -4,6 +4,8 @@
     display: flex;
     padding: 50px 10%;
     justify-content: space-between;
+    flex:1;
+    gap: 20px;
 }
 
 .main-title {
@@ -13,16 +15,30 @@
 
 .main-text,
 .main-image {
-    flex: 1;
+    flex-basis: 500px;
 }
 
 .main-text {
     font-size: 18px;
     color: #E5E7EB;
+    margin: 20px 0;
+}
+
+button {
+    background-color: #3882F6;
+    color: white;
+    padding: 6px 12px;
+    border-radius: 10px;
+    border: none;
+    
+
 }
 
 .main-image {
     width: 300px;
     height: 200px;
     background-color: grey;
+    display:flex;
+    justify-content: center;
+    align-items: center;
 }
