--- a/styles/main_style.css
+++ b/styles/main_style.css
@@ -4,6 +4,7 @@
     display: flex;
     padding: 50px 10%;
     justify-content: space-between;
+    align-items: stretch;
     flex:1;
     gap: 20px;
 }
@@ -11,11 +12,15 @@
 .main-title {
     font-size: 48px;
     font-weight: bolder;
+    margin: 0;
+    padding: 0;
 }
 
-.main-text,
-.main-image {
+.main-left-container,
+.main-right-container {
     flex-basis: 500px;
+    margin: 0;
+    padding: 0;
 }
 
 .main-text {
@@ -27,18 +32,16 @@
 button {
     background-color: #3882F6;
     color: white;
-    padding: 6px 12px;
+    padding: 12px 24px;
     border-radius: 10px;
     border: none;
-    
+    font-weight: 700;
 
 }
 
-.main-image {
+.main-right-container {
     width: 300px;
-    height: 200px;
     background-color: grey;
     display:flex;
     justify-content: center;
-    align-items: center;
 }
