--- a/styles/quote_style.css
+++ b/styles/quote_style.css
@@ -1,4 +1,18 @@
 .quote-container {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     flex: 1;
+    background-color: #E5E7EB;
+    padding: 50px 10%;
+}
+
+.quote-text {
+    font-size: 36px;
+    font-style: italic;
+}
+
+.quote-name {
+
 }
