--- a/styles/info_style.css
+++ b/styles/info_style.css
@@ -6,6 +6,7 @@
     align-items: center;
     padding: 50px 10%;
     justify-content: space-between;
+    min-height: 300px;
 }
 
 .info-title {
@@ -34,6 +35,7 @@
     border-style: solid;
     border-color: #3882F6;
     border-radius: 10px;
+    margin-bottom: 12px;
 }
 
 .card-text {
