--- a/styles/quote_style.css
+++ b/styles/quote_style.css
@@ -6,13 +6,20 @@
     flex: 1;
     background-color: #E5E7EB;
     padding: 50px 10%;
+    min-width: 750px;
+    min-height: 300px;
 }
 
 .quote-text {
     font-size: 36px;
     font-style: italic;
+    color: #1F2937;
+    text-align:left;
 }
 
 .quote-name {
-
+    align-self:flex-end;
+    margin-right: 50px;
+    font-weight: 800;
+    font-size: 20px;
 }
